tests/175_char_literal_range_error.err
pirxc compilation failed: exit status 1
Output: error parsing program: tests/175_char_literal_range_error.pirx:3:11: character literal 'é' does not fit in int8: only ASCII characters are supported
Error: exit status 1
