tests/175_char_literal_range_error.pirx
// Character literals must fit in int8, so non-ASCII codepoints are rejected.
func main(): int {
  var c = 'é';
  return int(c);
}
